--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/s6_d3
+spring.datasource.username=postgres
+spring.datasource.password=Mz16071996
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.hibernate.ddl-auto=update
