--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,17 @@ spring.datasource.password=Mz16071996
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.hibernate.ddl-auto=update
+
+cloudinary.cloud_name=db0yo3hjw
+cloudinary.api_key=914556443264548
+cloudinary.api_secret=H3-JjEamcYNyJvRL1JQWjgM_pKI
+
+gmail.host=smtp.gmail.com
+gmail.port=587
+gmail.email=marcoziino16@gmail.com
+gmail.transportProtocol=smtp
+gmail.smtpAuth=true
+gmail.smtpStarttlsEnable=true
+gmail.debug=true
+gmail.smtSslEnable=true
+gmail.password=fdjm fnvh ieck swmm
